Code cleanup and documentation added.